# privacycheck-co

./: .env.example  .env.local.example  .firebaserc  .gitignore  .vercelignore  APIS_PASO_A_PASO.md  CLAUDE.md  FIREBASE_CREDENCIALES.md  GUIA_CONEXION_VERCEL_WA.md  INSTRUCCIONES_CLIENTE.md  README.md  SETUP.md  apphosting.yaml  commit_all.bat  conectar_wa.bat  diagnostico.bat  firestore.indexes.json  firestore.rules  fix_and_start.bat  next.config.js  package-lock.json  package.json  push_fix.bat  subir_github.bat  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
api/.hypothesis/constants/: 0326538c3e5de2a8  05c2bb93227823b6  0e5165c136bb065b  189fd731faf08a64  1cd8661b26c6de39  26b29527a829c073  2813c3b9e2d70656  2992707cb0f92795  2a45d98b67c41972  2a5785163c9f604b  2b07242ffbe2dcf6  2c771a37b66520f3  2fa91a9802f4122c  3421e1373b4106c1  3487512f7d6ccfad  363b419b2e2c8053  3adc69252898cccd  45d8eed1801e76d5  55ebacbbc4a0d322  5ef927f9f481f5a0  633a2d030d746289  (+36 more)
api/alembic/: env.py
api/src/: __init__.py  config.py  database.py  main.py  models.py  seed.py
api/tests/: conftest.py  test_ai_gateway.py  test_auth.py  test_cache.py  test_channel_adapters.py  test_channel_adapters_pbt.py  test_chat.py  test_diagnostico_api.py  test_empresas.py  test_empresas_pbt.py  test_evaluaciones.py  test_fallback.py  test_integration.py  test_rate_limit.py  test_reportes.py  test_scoring.py  test_scoring_properties.py
(+180 files in other folders)
