[project]
name = "habeas-check-api"
version = "0.1.0"
description = "API backend for Habeas Check - Colombian Law 1581 compliance self-diagnostic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "bleach>=6.1.0",
    "openai>=1.12.0",
    "sse-starlette>=1.8.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "coverage>=7.4.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
